--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ VUE_APP_BACKEND_RELEASE = "https://github.com/lhl77/subweb-tsutsu"
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://cdn.jsdelivr.net/gh/tindy2013/subconverter/base/config/example_external_config.ini"
 
 # API 后端，不用显示
-# VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://api2.tsutsu.cc"
+# VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://api.youlr.tk"
 
 # 短链接后端
 VUE_APP_MYURLS_DEFAULT_BACKEND = "https://suo.yt"
